<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashScreenActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/frg_add_iv_photo"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_large" />
        <EditText
            android:id="@+id/frg_add_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_edittexts_padding"
            android:layout_margin="@dimen/add_items_margin"
            android:background="@color/edittext_bg_color"
            android:hint="@string/name_city" />

        <EditText
            android:id="@+id/frg_add_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_edittexts_padding"
            android:layout_margin="@dimen/add_items_margin"
            android:background="@color/edittext_bg_color"
            android:hint="@string/description" />

        <Spinner
            android:id="@+id/frg_add_spnr_presenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_edittexts_padding"
            android:layout_margin="@dimen/add_items_margin"
            android:background="@color/edittext_bg_color"
            android:hint="@string/presenter" />
        <EditText
            android:id="@+id/frg_add_et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_edittexts_padding"
            android:layout_margin="@dimen/add_items_margin"
            android:background="@color/edittext_bg_color"
            android:hint="@string/country" />

        <EditText
            android:id="@+id/frg_add_et_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_edittexts_padding"
            android:layout_margin="@dimen/add_items_margin"
            android:background="@color/edittext_bg_color"
            android:hint="@string/location" />
        <EditText
            android:id="@+id/frg_add_et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_edittexts_padding"
            android:layout_margin="@dimen/add_items_margin"
            android:background="@color/edittext_bg_color"
            android:hint="@string/date" />


    </LinearLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frg_add_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp" />


</LinearLayout>
</ScrollView>